--- a/Debug/makefile
+++ b/Debug/makefile
@@ -15,7 +15,11 @@ RM := rm -rf
 -include Middlewares/Third_Party/FreeRTOS/Source/subdir.mk
 -include Drivers/STM32F3xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
+-include Core/Src/ssd1306/subdir.mk
+-include Core/Src/ds3231/subdir.mk
+-include Core/Src/Keypad/subdir.mk
 -include Core/Src/Float_transform/subdir.mk
+-include Core/Src/BME280/subdir.mk
 -include Core/Src/subdir.mk
 -include objects.mk
 
